@@ -49,6 +49,10 @@ def test_suite():
                      setUp=configurationSetUp,
                      tearDown=tearDown,
                      optionflags=doctest.ELLIPSIS | doctest.NORMALIZE_WHITESPACE),
+       DocTestSuite('plone.app.vocabularies.editors', 
+                     setUp=configurationSetUp, 
+                     tearDown=tearDown, 
+                     optionflags=doctest.ELLIPSIS | doctest.NORMALIZE_WHITESPACE), 
         ))
 
 if __name__ == '__main__':
